# InventoryTrackingWebapp

./: .gitignore  README.md  app.py  config.py  database.db  forms.py  main.py  models.py  orderedList.py  pyproject.toml  requirements.txt  vercel.json  views.py  weather.py
migrations/versions/: 994a688c5b82_.py  d4f3263c013f_.py
templates/: add.html  base.html  edit.html  home.html  remove.html  search.html  shipments.html  view.html
