[tool.poetry]
name = "inventorytrackingwebapp"
version = "0.1.0"
description = ""
authors = ["SquidCaptain <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
Flask-Migrate = "^3.1.0"
requests = "^2.27.1"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
